# SpectroScope

./: MANIFEST.in  PKGBUILD  README.rst  TODOLIST.txt  requirements.txt  setup.cfg  setup.py  spectroscope.desktop  ui_spectroscope.py  ui_spectroscope_baseline.py  ui_spectroscope_colors.py  ui_spectroscope_persistence.py  ui_spectroscope_settings.py  ui_spectroscope_settings_help.py  ui_spectroscope_smoothing.py
dev/: ui2py.bat  ui2py.sh
spectroscope/: __main__.py  baseline.py  colors.py  data.py  persistence.py  plot.py  spectroscope.ui  spectroscope_baseline.ui  spectroscope_colors.ui  spectroscopeui  ui_spectroscope.py  ui_spectroscope_baseline.py  ui_spectroscope_colors.py  ui_spectroscope_persistence.py  ui_spectroscope_settings.py  ui_spectroscope_settings_help.py  ui_spectroscope_smoothing.py
spectroscope/backends/: hackrf_sweep.py  rtl_power.py  rx_power.py  soapy_power.py
spectroscope/languages/: spectroscope_cs.ts
src/spectroscope/: __main__.py  baseline.py  colors.py  data.py  persistence.py  plot.py  settings.py  smoothing.py  spectroscope_persistence.ui  spectroscope_settings.ui  spectroscope_settings_help.ui  spectroscope_smoothing.ui  ui_spectroscope.py  ui_spectroscope_baseline.py  ui_spectroscope_colors.py  ui_spectroscope_persistence.py  ui_spectroscope_settings.py  ui_spectroscope_settings_help.py  ui_spectroscope_smoothing.py  utils.py
src/spectroscope/backends/: __init__.py  hackrf_sweep.py  rtl_power.py  rtl_power_fftw.py  rx_power.py  soapy_power.py
src/spectroscope/ui/: default.css  (+14 more)
tools/: ui2py.bat  ui2py.ps1  ui2py.sh
