[metadata]      
name = spectroscope
version = 0.2.1
license = GNU GPLv3
description = Spectrum analyzer for multiple SDR platforms
long_description = file: README.rst, LICENSE
author = konung-yaropolk
author_email = yaropolk1995@gmail.com
url = https://github.com/konung-yaropolk/spectroscope
classifiers=
    Development Status :: 4 - Beta
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Qt
    Topic :: Communications :: Ham Radio
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.3
include_package_data = True
install_requires = 
    qtpy
    pyqt6
    soapy_power>=1.6.0
    pyqtgraph>=0.10.0

[options.packages.find]
where=src

[options.entry_points]
gui_scripts = spectroscope=spectroscope.__main__:main

[options.package_data]
spectroscope =
    spectroscope.svg
    *.ui
    languages/*.qm
    languages/*.ts